# yummy

./: .env  .gitignore  404.html  Cargo.toml  README.md  index.html  rustfmt.toml  sitemap.xml  yummy.db
.cargo/: config.toml
.github/workflows/: Build.yml  document-generator.yml  rust.yml
cache/: Cargo.toml
cache/src/: cache.rs  lib.rs  state_resource.rs
cache/src/state/: inmemory.rs  mod.rs  resource.rs  stateless.rs  test.rs
code-coverage/: index.html
connection/: index.html
core/: Cargo.toml
core/src/: config.rs  error.rs  jwt.rs  lib.rs  model.rs  web.rs
database/: Cargo.toml  diesel.toml
database/src/: account.rs  auth.rs  error.rs  lib.rs  model.rs  room.rs  schema.rs  state_resource.rs  user.rs
database/src/test/: auth_test.rs  room_test.rs  user_test.rs
documents/: README.md  auth.md  mkdocs.yml  room.md  user.md
documents/docs/: code-coverage.md  connection.md  env-variables.md  file-format.md  index.md  installation.md  unit-test.md
documents/docs/css/: extra.css
documents/docs/lua/: auth.md  scripting.md  user.md
documents/docs/message/: auth.md  general-objects.md  room.md  user.md
documents/docs/python/: auth.md  scripting.md  user.md
documents/site/: 404.html  index.html  sitemap.xml
documents/site/code-coverage/: index.html
documents/site/env-variables/: index.html
documents/site/message/auth/: index.html
documents/site/message/room/: index.html
documents/site/message/user/: index.html
documents/site/search/: search_index.json
env-variables/: index.html
examples/tic-tac-toe/: index.html  tictactoe.py
file-format/: index.html
general/: Cargo.toml
general/src/: auth.rs  cache.rs  client.rs  config.rs  error.rs  jwt.rs  lib.rs  lua.rs  meta.rs  model.rs  password.rs  pubsub.rs  state.rs  test.rs  tls.rs  web.rs  websocket.rs
general/src/cache/: mod.rs
general/src/state/: inmemory.rs  mod.rs  resource.rs  stateless.rs  test.rs
general/src/test/: meta_test.rs  mod.rs  model_test.rs  tls_test.rs
installation/: index.html
interface/: Cargo.toml
interface/src/: auth.rs  lib.rs
interface/src/lua/: mod.rs  model.rs  test.rs
lua/: Cargo.toml
lua-interface/: Cargo.toml
lua-interface/src/: lib.rs
lua/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
manager/: Cargo.toml
manager/src/: lib.rs  macros.rs  mod.rs  response.rs
manager/src/api/: auth.rs  mod.rs  user.rs
manager/src/api/auth/: mod.rs  model.rs  test.rs
manager/src/api/comm/: mod.rs  model.rs
manager/src/api/conn/: mod.rs  model.rs
manager/src/api/connection/: mod.rs  model.rs  test.rs
manager/src/api/room/: mod.rs  model.rs  test.rs
manager/src/api/user/: mod.rs  model.rs  test.rs
manager/src/auth/: mod.rs  model.rs  test.rs
manager/src/conn/: mod.rs  model.rs
manager/src/plugin/: auth.rs  mod.rs
manager/src/plugin/lua/: mod.rs  model.rs  test.rs
manager/src/plugin/lua/bind/: buildin.rs  context.rs  mod.rs
manager/src/plugin/python/: mod.rs  model.rs  test.rs  util.rs
manager/src/plugin/python/modules/: mod.rs
manager/src/room/: mod.rs  model.rs  test.rs
manager/src/user/: logic.rs  mod.rs  model.rs  test.rs
message/auth/: index.html
message/general-objects/: index.html
message/room/: index.html
message/user/: index.html
model/: Cargo.toml
model/src/: auth.rs  config.rs  lib.rs  meta.rs  web.rs
model/src/meta/: collection.rs  mod.rs
python/auth/: index.html
python/scripting/: index.html
python/user/: index.html
search/: search_index.json
server/: Cargo.toml
server/lua/: auth.lua  room.lua  user.lua
server/py/: test.py  yummy.pyi
server/src/: auth.rs  config.rs  core.rs  endpoint.rs  error.rs  game.rs  main.rs  manager.rs  model.rs
server/src/api/: account.rs  http.rs  mod.rs  request.rs  response.rs
server/src/api/test/: mod.rs  steps.rs
server/src/api/websocket/: client.rs  mod.rs  socket.rs  tests.rs
server/src/websocket/: client.rs  mod.rs  request.rs  response.rs  socket.rs
server/tests/: auth.feature  room.feature  steps.txt
testing/: Cargo.toml
testing/src/: cache.rs  client.rs  database.rs  lib.rs  model.rs
unit-test/: index.html
yummy-cache/: Cargo.toml
yummy-cache/src/: cache.rs  state_resource.rs
yummy-cache/src/state/: inmemory.rs  mod.rs  resource.rs  stateless.rs  test.rs
yummy-database/: Cargo.toml
yummy-database/src/: auth.rs  lib.rs  room.rs  user.rs
yummy-database/src/test/: auth_test.rs  mod.rs  room_test.rs  user_test.rs
yummy-general/: Cargo.toml
yummy-general/src/: client.rs  database.rs  lib.rs  pubsub.rs  tls.rs
yummy-general/src/state/: resource.rs
yummy-general/src/test/: meta_test.rs  model_test.rs  tls_test.rs
yummy-macros/: Cargo.toml
yummy-macros/src/: lib.rs
yummy-manager/: Cargo.toml
yummy-manager/src/: lib.rs
yummy-manager/src/auth/: mod.rs  model.rs  test.rs
yummy-manager/src/conn/: mod.rs  model.rs
yummy-manager/src/plugin/: mod.rs
yummy-manager/src/plugin/python/: mod.rs  model.rs  test.rs  util.rs
yummy-manager/src/plugin/python/modules/: base.rs  constants.rs  mod.rs  model.rs  room.rs  user.rs
yummy-manager/src/room/: logic.rs  mod.rs  model.rs  test.rs
yummy-manager/src/user/: logic.rs  mod.rs  model.rs  test.rs
yummy-model/: Cargo.toml
yummy-model/src/: config.rs  lib.rs  request.rs  state.rs  web.rs
yummy-model/src/meta/: collection.rs  mod.rs
yummy-model/src/user/: mod.rs
yummy-server/: Cargo.toml
yummy-server/py/: reference.py  test.py  yummy.pyi
yummy-server/py/yummy/: __init__.pyi  constants.pyi  model.pyi  room.pyi  user.pyi
yummy-server/src/: lib.rs  main.rs
yummy-server/src/api/: http.rs  mod.rs  request.rs
yummy-server/src/api/test/: mod.rs  steps.rs
yummy-server/src/api/websocket/: mod.rs  tests.rs
yummy-server/tests/: auth.feature  general.feature  room.feature  steps.txt
yummy-testing/: Cargo.toml
yummy-testing/src/: cache.rs  client.rs  database.rs  model.rs
