[workspace]
members = [
    "macros",
    "server",
    "manager",
    "database",
    "general"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Erhan Baris <erhanbaris@gmail.com>"]
repository = "https://github.com/erhanbaris/yummy"
homepage = "https://github.com/erhanbaris/yummy"

[workspace.dependencies]
general = { path = "./general", features = [] }
manager = { path = "./manager", features = [] }
server = { path = "./server", features = [] }
database = { path = "./database" }
macros = { path = "./macros" }

redis = { version = "0.22.3", features = ["r2d2", "tokio-comp"] }
r2d2 =  { version = "0.8.10" }
actix = "0.13"
actix-web = { version = "4", features = ["rustls"] }
actix-test-server = "0.2.2"
actix-test = { version = "0.1.0", features = ["rustls"] } 
actix-http = "3.3.0"
actix-tls = { version = "3", features = ["rustls"] }
tokio = { version = "1.24.2", features = ["full"] }
bytes = "1.3.0"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
serde_repr = "0.1"
uuid = { version = "1.2", features = ["serde", "v4"] }

rand = "0.8.5"
log = "0.4"
secrecy = { version = "0.8.0", features = ["serde"] }
env_logger = "0.10.0"

jsonwebtoken = "8.2.0"

num-derive = "0.3.3"
num-traits = "0.2.15"

strum = "0.24"
strum_macros = "0.24"

thiserror = "1.0.38"
anyhow = "1.0.68"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.18.0"

validator = { version = "0.16", features = ["derive"] }
serde_trim = "0.4.0"

dotenv = "0.15.0"

awc = { version = "3.1.0", features = ["rustls"] }
actix-codec = "0.5.0"
futures = "0.3.25"
futures-util = "0.3.25"

actix-web-actors = "4.2.0"
actix-broker = "0.4.3"

actix-cors = "0.6.4"
actix-files = "0.6.2"

diesel = { version = "2.0.3", features = ["sqlite", "numeric", "r2d2"] }
diesel-derive-enum = { version = "1.1.2", features = ["sqlite"] }

tempfile = "3.3.0"
rcgen = "0.10.0"

parking_lot = "0.12.1"

syn = { version = "1", features = ["full"] }
proc-macro2 = "1.0.50"
quote = "1"
darling = "0.14.2"
libsqlite3-sys = { version = "^0", features = ["bundled"] }

cucumber = "0.19.1"
async-trait = "0.1.63"

mlua = { version = "0.8.7", features = ["lua54", "vendored"] }
