[workspace]
members = [
    "yummy-macros",
    "yummy-server",
    "yummy-manager",
    "yummy-database",
    "yummy-general",
    "yummy-cache",
    "yummy-testing",
    "yummy-model"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Erhan Baris <erhanbaris@gmail.com>"]
repository = "https://github.com/erhanbaris/yummy"
homepage = "https://github.com/erhanbaris/yummy"

[workspace.dependencies]
yummy-general = { path = "./yummy-general", features = [] }
yummy-manager = { path = "./yummy-manager", features = [] }
yummy-server = { path = "./yummy-server", features = [] }
yummy-database = { path = "./yummy-database" }
yummy-macros = { path = "./yummy-macros" }
yummy-cache = { path = "./yummy-cache" }
yummy-testing = { path = "./yummy-testing" }
yummy-model = { path = "./yummy-model", features = [] }

redis = { version = "0.23.0", features = ["r2d2", "tokio-comp"] }
r2d2 =  { version = "0.8.10" }
actix = "0.13"
actix-web = { version = "4", features = ["rustls"] }
actix-test-server = "0.2.2"
actix-test = { version = "0.1.1", features = ["rustls"] } 
actix-http = "3.3.1"
actix-tls = { version = "3", features = ["rustls"] }
tokio = { version = "1.29.0", features = ["full"] }
bytes = "1.4.0"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.96"
rustls = "0.20.8"
rustls-pemfile = "1.0.3"
serde_repr = "0.1"
uuid = { version = "1.3", features = ["serde", "v4"] }
glob = "0.3.1"

rand = "0.8.5"
log = "0.4"
secrecy = { version = "0.8.0", features = ["serde"] }
env_logger = "0.10.0"

jsonwebtoken = "8.3.0"

num-derive = "0.3.3"
num-traits = "0.2.15"
num-bigint = "0.4.3"

strum = "0.24"
strum_macros = "0.24"

thiserror = "1.0.40"
anyhow = "1.0.71"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.18.0"

validator = { version = "0.16", features = ["derive"] }
serde_trim = "0.4.0"

dotenv = "0.15.0"

awc = { version = "3.1.1", features = ["rustls"] }
actix-codec = "0.5.1"
futures = "0.3.28"
futures-util = "0.3.28"

actix-web-actors = "4.2.0"
actix-broker = "0.4.3"

actix-cors = "0.6.4"
actix-files = "0.6.2"

diesel = { version = "2.0.4", features = ["sqlite", "numeric", "r2d2"] }
diesel-derive-enum = { version = "2.0.1", features = ["sqlite"] }

tempfile = "3.5.0"
tempdir = "0.3.7"

rcgen = "0.10.0"

parking_lot = "0.12.1"

syn = { version = "2", features = ["full"] }
proc-macro2 = "1.0.63"
quote = "1.0.29"
darling = "0.20.1"
libsqlite3-sys = { version = "^0.25.2", features = ["bundled"] }

cucumber = "0.19.1"
async-trait = "0.1.68"
rustpython = {git = "http://github.com/rustpython/rustpython.git", rev = "fd028253fefa851ae22d482a86425cce0db8623b", features = ["stdlib", "freeze-stdlib"]}
rustpython-vm = {git = "http://github.com/rustpython/rustpython.git", rev = "fd028253fefa851ae22d482a86425cce0db8623b", features = ["freeze-stdlib", "serde"]}

prometheus = "0.13.3"
actix-web-prometheus = "0.1.2"
lazy_static = "1.4.0"

moka = { version = "0.11", features = ["future"] }
