[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4", features = ["rustls"] }

thiserror = "1.0.37"
harsh = "0.2.2"

chrono = "0.4.22"
jsonwebtoken = "8.1.1"

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_repr = "0.1"
uuid = { version = "1.2", features = ["serde", "v4"] }