[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general.workspace = true

tracing = "0.1"
tracing-subscriber = "0.3"
r2d2 =  { workspace = true }
diesel = { version = "2.0.2", features = ["sqlite", "numeric", "r2d2"] }
diesel-derive-enum = { version = "1.1.2", features = ["sqlite"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
thiserror = "1.0.38"
anyhow = "1.0.66"
secrecy = { version = "0.8.0", features = ["serde"] }

serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.91"

strum = "0.24"
strum_macros = "0.24"

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "^0", features = ["bundled"] }
