[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general.workspace = true

tracing.workspace = true
r2d2.workspace = true
diesel.workspace = true
diesel-derive-enum.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true

strum.workspace = true
strum_macros.workspace = true

[target.'cfg(windows)'.dependencies]
libsqlite3-sys.workspace = true
