[package]
name = "general"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4", features = ["rustls"] }

thiserror = "1.0.37"
anyhow = "1.0.66"
secrecy = { version = "0.8.0", features = ["serde"] }

jsonwebtoken = "8.2.0"
futures-util = "0.3.25"

lockfree = "0.5.1"
parking_lot = "0.12.1"

serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.89"
serde_repr = "0.1"
uuid = { version = "1.2", features = ["serde", "v4"] }

tracing = "0.1"
tracing-subscriber = "0.3"

rand = "0.8.5"

r2d2 =  { version = "0.8.10", optional = true }
redis = { version = "0.22.1", features = ["r2d2"], optional = true }

dotenv = "0.15.0"

[features]
stateless = ["dep:redis", "dep:r2d2"]
default = []
