[package]
name = "general"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix.workspace = true
actix-web.workspace = true

thiserror = "1.0.38"
anyhow = "1.0.68"
secrecy = { version = "0.8.0", features = ["serde"] }

jsonwebtoken = "8.2.0"
futures = "0.3.25"
futures-util = "0.3.25"

lockfree = "0.5.1"
parking_lot = "0.12.1"

serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.91"
serde_repr = "0.1"
uuid = { version = "1.2", features = ["serde", "v4"] }

tracing = "0.1"
tracing-subscriber = "0.3"

rand = "0.8.5"
log = "0.4"

rustls.workspace = true
rustls-pemfile.workspace = true

# stateless dependencies
r2d2 =  { workspace = true, optional = true }
redis = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

dotenv = "0.15.0"

[dev-dependencies]
tempfile = "3.3.0"
rcgen = "0.10.0"

[features]
stateless = ["dep:redis", "dep:r2d2", "dep:tokio", "dep:bytes"]
default = []
