[package]
name = "general"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix.workspace = true
actix-web.workspace = true

thiserror.workspace = true
anyhow.workspace = true
secrecy.workspace = true

jsonwebtoken.workspace = true
futures.workspace = true
futures-util.workspace = true

parking_lot.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
uuid.workspace = true

tracing.workspace = true

rand.workspace = true
log.workspace = true

rustls.workspace = true
rustls-pemfile.workspace = true

strum.workspace = true
strum_macros.workspace = true

# stateless dependencies
r2d2 =  { workspace = true, optional = true }
redis = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

dotenv.workspace = true

tempfile.workspace = true
rcgen.workspace = true

[features]
stateless = ["dep:redis", "dep:r2d2", "dep:tokio", "dep:bytes"]
default = []
