[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general.workspace = true
database.workspace = true
macros.workspace = true

actix.workspace = true
actix-web-actors = "4.1.0"
actix-web = { version = "4", features = ["rustls"] }
actix-broker = "0.4.3"

thiserror = "1.0.38"
anyhow = "1.0.68"
secrecy = { version = "0.8.0", features = ["serde"] }

log = "0.4"

serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.91"
serde_repr = "0.1"
uuid = { version = "1.2", features = ["serde", "v4"] }

tracing = "0.1"
tracing-subscriber = "0.3"

validator = { version = "0.16", features = ["derive"] }
serde_trim = "0.4.0"

rand = "0.8.5"

r2d2 =  { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[features]
stateless = ["dep:redis", "dep:r2d2"]
default = []