[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general.workspace = true
database.workspace = true
macros.workspace = true

actix.workspace = true
actix-web-actors.workspace = true
actix-web.workspace = true
actix-broker.workspace = true

thiserror.workspace = true
anyhow.workspace = true

log.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
uuid.workspace = true

tracing.workspace = true

validator.workspace = true
serde_trim.workspace = true

rand.workspace = true

r2d2 =  { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[features]
stateless = ["dep:redis", "dep:r2d2"]
default = []