[package]
name = "manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
model.workspace = true
general.workspace = true
database.workspace = true
macros.workspace = true
cache.workspace = true
testing.workspace = true

actix.workspace = true
actix-web-actors.workspace = true
actix-web.workspace = true
actix-broker.workspace = true
glob.workspace = true

thiserror.workspace = true
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true

log.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
uuid.workspace = true

tracing.workspace = true
tempdir.workspace = true

validator.workspace = true
serde_trim.workspace = true

rand.workspace = true

r2d2 =  { workspace = true, optional = true }
redis = { workspace = true, optional = true }

mlua.workspace = true

rustpython-vm.workspace = true
rustpython-pylib.workspace = true
rustpython-derive.workspace = true

moka.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
testing.workspace = true

[features]
stateless = ["dep:redis", "dep:r2d2"]
default = []