[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid.workspace = true

actix.workspace = true
actix-web.workspace = true

diesel.workspace = true
diesel-derive-enum.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true

rand.workspace = true
log.workspace = true

num-traits.workspace = true
num-derive.workspace = true

jsonwebtoken.workspace = true

dotenv.workspace = true