[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { path = "../general" }
database = { path = "../database" }
manager = { path = "../manager" }

actix = "0.13"
actix-cors = "0.6.4"
actix-web = { version = "4", features = ["rustls"] }
actix-web-actors = "4.1.0"
actix-files = "0.6.2"

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serde_repr = "0.1"
uuid = { version = "1.2", features = ["serde", "v4"] }

log = "0.4"
env_logger = "0.9.3"

chrono = "0.4.23"
jsonwebtoken = "8.1.1"
harsh = "0.2.2"

num-derive = "0.3.3"
num-traits = "0.2.15"

strum = "0.24"
strum_macros = "0.24"

thiserror = "1.0.37"
anyhow = "1.0.66"
secrecy = { version = "0.8.0", features = ["serde"] }
hmac = "0.12.1"
sha2 = "0.10"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.18.0"

validator = { version = "0.16", features = ["derive"] }
serde_trim = "0.4.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
actix-test-server = "0.2.2"
actix-test = "0.1.0"
actix-http = "3.2.2"

awc = "3.0.1"
actix-codec = "0.5.0"
futures = "0.3.25"
futures-util = "0.3.25"