[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general.workspace = true
database.workspace = true
manager.workspace = true

actix.workspace = true
actix-cors = "0.6.4"
actix-web = { version = "4", features = ["rustls"] }
actix-web-actors = "4.1.0"
actix-files = "0.6.2"

serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.91"
serde_repr = "0.1"
uuid = { version = "1.2", features = ["serde", "v4"] }

log = "0.4"
env_logger = "0.10.0"

jsonwebtoken = "8.2.0"

num-derive = "0.3.3"
num-traits = "0.2.15"

strum = "0.24"
strum_macros = "0.24"

thiserror = "1.0.38"
anyhow = "1.0.66"
secrecy = { version = "0.8.0", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.18.0"

validator = { version = "0.16", features = ["derive"] }
serde_trim = "0.4.0"

moka = { version = "0.9.6", features = ["future"] }

r2d2 =  { workspace = true, optional = true }
redis = { workspace = true, optional = true }

dotenv = "0.15.0"

[dev-dependencies]
tokio.workspace = true
actix-test-server = "0.2.2"
actix-test = "0.1.0"
actix-http = "3.2.2"

awc = "3.0.1"
actix-codec = "0.5.0"
futures = "0.3.25"
futures-util = "0.3.25"

[features]
stateless = ["dep:redis", "dep:r2d2"]
default = []
