[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
general.workspace = true
database.workspace = true
manager.workspace = true
interface.workspace = true

actix.workspace = true
actix-cors.workspace = true
actix-web.workspace = true
actix-web-actors.workspace = true
actix-files.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
uuid.workspace = true

log.workspace = true
env_logger.workspace = true

jsonwebtoken.workspace = true

num-derive.workspace = true
num-traits.workspace = true

strum.workspace = true
strum_macros.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true

validator.workspace = true
serde_trim.workspace = true

r2d2 =  { workspace = true, optional = true }
redis = { workspace = true, optional = true }

dotenv.workspace = true

cucumber.workspace = true
async-trait.workspace = true
tokio.workspace = true
actix-test-server.workspace = true
actix-test.workspace = true
actix-http.workspace = true
actix-tls.workspace = true

rustls.workspace = true
awc.workspace = true
actix-codec.workspace = true
futures.workspace = true
futures-util.workspace = true

[dev-dependencies]

[features]
stateless = ["dep:redis", "dep:r2d2"]
default = []
