[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model.workspace = true
general.workspace = true
database.workspace = true
cache.workspace = true

actix.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true

anyhow.workspace = true
uuid.workspace = true
