[package]
name = "yummy-general"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
yummy-model.workspace = true

actix.workspace = true
actix-web.workspace = true
diesel.workspace = true

thiserror.workspace = true
anyhow.workspace = true
secrecy.workspace = true

jsonwebtoken.workspace = true
futures.workspace = true
futures-util.workspace = true

parking_lot.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
uuid.workspace = true

tracing.workspace = true

rand.workspace = true
log.workspace = true

actix-tls.workspace = true

rustls.workspace = true
rustls-pemfile.workspace = true

strum.workspace = true
strum_macros.workspace = true

num-traits.workspace = true
num-derive.workspace = true

r2d2.workspace = true

# stateless dependencies
redis = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

dotenv.workspace = true

tempfile.workspace = true
rcgen.workspace = true

awc.workspace = true
actix-codec.workspace = true
moka.workspace = true

[features]
stateless = ["dep:redis", "dep:tokio", "dep:bytes"]
default = []
