[package]
name = "yummy-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true
doctest = false

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
darling.workspace = true