[package]
name = "yummy-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yummy-model.workspace = true
yummy-general.workspace = true
yummy-database.workspace = true
yummy-cache.workspace = true

actix.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true

anyhow.workspace = true
uuid.workspace = true
